<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/changeWelcome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="3dp"
        android:id="@+id/addWelcome" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/productDescription"
        android:id="@+id/description"
        android:layout_marginBottom="42dp"
        android:layout_above="@+id/changeQuantity"
        android:layout_alignLeft="@+id/addWelcome"
        android:layout_alignStart="@+id/addWelcome" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/productName"
        android:id="@+id/productNameTV"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/addWelcome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/quantity"
        android:id="@+id/quantityTV"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/invoicePrice"
        android:id="@+id/invoicePriceTV"
        android:layout_below="@+id/quantityTV"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="61dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sellPrice"
        android:id="@+id/sellPriceTV"
        android:layout_marginTop="58dp"
        android:layout_below="@+id/invoicePriceTV"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/changeProductName"
        android:layout_alignBottom="@+id/productNameTV"
        android:layout_toRightOf="@+id/productNameTV"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/changeDescription"
        android:layout_alignBottom="@+id/description"
        android:layout_alignRight="@+id/addWelcome"
        android:layout_alignEnd="@+id/addWelcome"
        android:layout_toRightOf="@+id/description"
        android:layout_toEndOf="@+id/description" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/changeQuantity"
        android:layout_alignBottom="@+id/quantityTV"
        android:layout_toRightOf="@+id/quantityTV"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/changeInvoicePrice"
        android:layout_alignBottom="@+id/invoicePriceTV"
        android:layout_toRightOf="@+id/invoicePriceTV"
        android:layout_alignRight="@+id/changeDescription"
        android:layout_alignEnd="@+id/changeDescription" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/changeSellPrice"
        android:layout_alignBottom="@+id/sellPriceTV"
        android:layout_toRightOf="@+id/sellPriceTV"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirm"
        android:id="@+id/submit"
        android:layout_alignTop="@+id/changeGoBack"
        android:layout_alignRight="@+id/changeQuantity"
        android:layout_alignEnd="@+id/changeQuantity" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Go Back without Saving"
        android:id="@+id/changeGoBack"
        android:layout_below="@+id/sellPriceTV"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>